iac/kustomize/aws-iam-oidc-provider/base/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: aws-iam-oidc
  labels:
    app: aws-iam-oidc
    service: aws-iam-oidc
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: aws-iam-oidc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aws-iam-oidc
  labels:
    app: aws-iam-oidc
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aws-iam-oidc
      version: v1
  template:
    metadata:
      labels:
        app: aws-iam-oidc
        version: v1
    spec:
      serviceAccountName: aws-iam-oidc
      containers:
        - name: aws-iam-oidc
          image: httpd:2.4.67-trixie
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 80
          resources:
            limits:
              cpu: 50m
              memory: 86Mi
            requests:
              cpu: 10m
              memory: 64Mi
          volumeMounts:
            - name: oidcpvc
              mountPath: /usr/local/apache2/htdocs/oidc
      volumes:
        - name: oidcpvc
          persistentVolumeClaim:
            claimName: aws-iam-oidc-pvc
            readOnly: false
