iac/kustomize/aws-iam-oidc-provider/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: aws-iam-oidc
  namespace: default
spec:
  parentRefs:
    - name: gateway-public
      namespace: kgateway-system
      sectionName: https-oidc
  hostnames:
    - oidc.home.bradandmarsha.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: aws-iam-oidc
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: aws-iam-oidc-https-redirect
  namespace: default
spec:
  parentRefs:
    - name: gateway-public
      namespace: kgateway-system
      sectionName: http
  hostnames:
    - oidc.home.bradandmarsha.com
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
